# sengenbango

./: .gitignore  .gitmodules  LICENSE  README.md  SOURCES.md  TODO.md  compose.dev.yml  compose.yml  nginx.conf
app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
app/public/: manifest.json
app/src/: App.tsx  main.tsx
app/src/components/: Code.tsx  Help.tsx  LanguageSwitch.tsx  Search.tsx  SearchResult.tsx  SearchResultLoading.tsx  SearchSettings.tsx  Settings.tsx
app/src/components/layout/: CustomDialog.tsx
app/src/hooks/: useLocalStorage.ts  useTheme.ts
app/src/query/: api.ts  parser.ts  sample.json
app/src/util/: SearchSettings.tsx  SearchStatus.tsx  Sources.tsx  theme.ts
data/: .gitignore  README.md  quickscore.py  requirements.txt  score.py
data/scripts/: all.py  basics.py  bpersona.py  coursera.py  flores.py  jparacrawl.py  jparacrawl_filtered.py  kyoto.py  legal.py  natcom.py  nllb.py  novels.py  opensubtitles.py  reuters.py  tatoeba.py  ted.py  util.py  wordnet.py
database/: .gitignore  01-init.sql  Dockerfile  README.md
database/textsearch_ja/: encoding_eucjp.c  encoding_utf8.c  textsearch_ja.c  textsearch_ja.sql.in
database/textsearch_ja/doc/: index-ja.html  index.html  style.css  textsearch_ja.html
database/textsearch_ja/msvc/: lib.vcproj  textsearch_ja.2010.sln  textsearch_ja.2010.vcxproj  textsearch_ja.2010.vcxproj.filters  textsearch_ja.sln
server/: .gitignore  Cargo.toml  Dockerfile  README.md
server/src/: data.rs  main.rs
