[package]
name = "sengenbango-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sengenbango-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
indoc = "2.0.4"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "limit", "buffer"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
